# shiboken-foo

./: .gitignore  makefile  readme.org
binding/: CMakeLists.txt
binding/glue/: CMakeLists.txt  bindings.xml
binding/test/: test.py
src/: Makefile  foo.cpp  foo.h  src.pro
test/: Makefile  test  test.cpp
